css/style.css
/* Import Fonts */
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");

/* Mobile Screen Adjustments */
@media screen and (max-width: 400px) {
  nav a {
    float: none;
    text-align: center;
  }
  .flex-container {
    display: block;
    width: 95%;
  }
}

/* Components */
/* Navigation */
/* Text Component 1: Nav Bar*/
nav {
  width: 100%;
  background-color: #1f1f1f;
  position: relative;
  height: auto;
  overflow: auto;
  border-radius: 4px;
}
/* Nav Links */
nav a {
  float: left;
  display: block;
  font-weight: bold;
  color: #0092e0;
  font-size: 15px;
  padding: 12px;
}
.social-links {
  font-size: 70px;
  padding: 5px;
}
nav a, .social-links {
  text-decoration: none;
}
/* Active Page */
a.active {
  background-color: #e6e6e6;
  color: #0757a3;
}

/* Graphical Component 1: About Articles */
.flex-container {
  width: 98%;
  height: auto;
  background-color: #1f1f1f;
  border-radius: 12px;
  padding: 12px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.flex-item {
  width: 300px;
  height: 400px;
  background-color: #0092e0f6;
  border-radius: 10px;
  margin: 20px;
}
.flex-item h3, .flex-item p  {
  padding: 2px 6px;
}
.flex-item img {
  width: 100%;
  height: auto;
}

/* Graphical Component 2: Blog Post */
.blog-post {
  background-color: #1f1f1f;
  margin: 15px 10px;
  border: 1.5px solid #0092e0;
  border-radius: 20px;
}
.blog-post .date {
  font-size: 10px;
  text-align: left;
  opacity: .7;
}
.blog-post h2 .blog-post p, .blog-post .date {
  padding: 4px 10px;
}
.blog-post img {
  width: 100%;
  height: auto;
}
.blog-post h3, .blog-post ul {
  text-align: left;
}
.blog-post h3 {
  padding-left: 4px;
}

/* Text Component 2: Contact Form */
input[type=text], textarea {
  background-color: #1f1f1f;
  width: 97%;
  padding: 12px;
  border: 1px solid #f5f5f5;
  border-radius: 4px;
  box-sizing: border-box;
  margin: 8px;
  resize: vertical;
}
input[type=submit] {
  background-color: #0092e0;
  color: #e6e6e6;
  margin-bottom: 8px;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

/* General styling */
body {
  background-color: #2b2b2b;
  color: #e6e6e6;
  font-family: 'Roboto Mono', sans-serif;
  text-align: center;
  height: auto;
}
/* Text Component 3: Page Headers */
h1 {
  font-style: italic;
  margin: 20px 0px;
  border-bottom: 2px solid #0092e0;
  font-size: 50px;
}
h2 {
  padding: 2px;
  font-size: 35px;
}
p {
  font-size: 13px;
}
/* Text Component 4: Footers  */
footer {
  margin: 15px;
  padding: 10px;
  opacity: 0.7;
}
#foot-text {
  font-size: 11px;
}
#back-to-top {
  font-weight: bold;
  font-size: 15px;
}

